nginx-reverse-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-reverse-proxy
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: iskprinter.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: backend
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
